fixed cross browser page scrollbar

--- a/public/css/customer-account.css
+++ b/public/css/customer-account.css
@@ -14,7 +14,7 @@
 
 .main-customer-accounts .container {
     width: 98%;
-    height: 70vh;
+    height: 68vh;
     margin: 10px auto;
     overflow-y: scroll;
 }
